--- a/page1.html
+++ b/page1.html
@@ -43,8 +43,10 @@
         <button type="button">Sign up</button>
       </div>
     </div>
+
     <main class="allPages">
-      <!-- ============================================ -->
+      <!-- ====================== JOIN MEETUP ====================== -->
+
       <div id="content-block">
         <div class="text">
           <h1>The people platform—Where interests become friendships</h1>
@@ -62,6 +64,8 @@
           />
         </div>
       </div>
+
+      <!-- ====================== EVENTS ====================== -->
 
       <section id="events">
         <div class="heading2">
@@ -214,7 +218,9 @@
           </div>
         </div>
       </section>
-      <!-- ================================================= -->
+
+      <!-- ====================== MEETUP BLOCK ====================== -->
+
       <section id="meetup">
         <div class="content-meetup">
           <h2 class="meetupText">Join Meetup</h2>
@@ -229,7 +235,8 @@
           <img src="accets/images/Join meetup/image.svg" />
         </div>
       </section>
-      <!-- ================================================= -->
+
+      <!-- ====================== CATEGORIES ====================== -->
 
       <section id="exploreTopCategories">
         <h2>Explore top categories</h2>
@@ -271,7 +278,7 @@
         </section>
       </section>
 
-      <!-- ================================================= -->
+      <!-- ====================== CITY OF MEETUP ====================== -->
 
       <section id="citiesOnMeetup">
         <h2>Popular cities on Meetup</h2>
@@ -315,7 +322,7 @@
         </div>
       </section>
 
-      <!-- ================================================= -->
+      <!-- ====================== MEETUP WORKS ====================== -->
 
       <section id="meetupWorks">
         <h2>How Meetup works</h2>
@@ -349,7 +356,7 @@
         </div>
       </section>
 
-      <!-- ================================================= -->
+      <!-- ====================== FRIENDSHIPS ====================== -->
 
       <section id="friendships">
         <h2>Friendships are made on Meetup</h2>
@@ -402,7 +409,7 @@
       </section>
     </main>
 
-    <!-- ================================================= -->
+    <!-- ====================== FOOTER ====================== -->
 
     <footer id="footer">
       <div class="test">
