--- a/page2.html
+++ b/page2.html
@@ -47,7 +47,8 @@
       </div>
     </navbar>
 
-    <!-- ============================================ -->
+    <!-- ====================== Cards and Filters ====================== -->
+
     <main>
       <div class="eventsMainTopContainer">
         <div class="container">
@@ -105,6 +106,9 @@
         </div>
       </div>
     </main>
+
+    <!-- ====================== Footer ====================== -->
+
     <footer id="footer">
       <div class="test">
         <div class="footerHead">
