--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- ====================== Nav Menu ====================== -->
-    <navbar>
+    <nav>
       <div id="search-container">
         <div class="logo">
           <a href="page1.html"
@@ -50,19 +50,51 @@
         </div>
 
         <div class="extra-links">
-          <a href="#"
-            ><img
-              src="accets/images/navMenu/language.svg"
-              alt="language icon"
-              style="height: 16px"
-            />
-            English
-          </a>
+          <img
+            src="accets/images/navMenu/language.svg"
+            alt="language icon"
+            style="height: 16px"
+          />
+          <a class="english" href="#"> English </a>
           <a href="#">Log in</a>
           <button type="button">Sign up</button>
         </div>
       </div>
-    </navbar>
+
+      <form id="navSearchFormSmall">
+        <input
+          type="search"
+          name="navSearchSmall"
+          id="navSearchSmall"
+          placeholder="Search events"
+        />
+
+        <button id="navSearchSubmitSmall">
+          <svg
+            id="navSearchIconSmall"
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#707070"
+          >
+            <path
+              d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
+            /></svg
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#FFF"
+          >
+            <path
+              d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
+            />
+          </svg>
+        </button>
+      </form>
+    </nav>
 
     <!-- ====================== Cards and Filters ====================== -->
 
